--- a/sass/style.sass
+++ b/sass/style.sass
@@ -17,7 +17,6 @@ header
 	height: $header-height
 	width: 100%
 
-
 .margin-top-2
 	margin-top: 2rem
 
@@ -72,6 +71,7 @@ a
 	border-radius: 0 0 10px 10px
 	background-color: rgba(102, 169, 0, 1)
 	box-shadow: 0 0 10px 0 rgba(0,0,0, .3)
+	overflow: hidden
 
 
 .baner_img
@@ -106,6 +106,9 @@ a
 		display: flex
 		li
 			font-size: 1.1rem
+
+.menu_item
+	transition: all .2s ease
 
 .wave_top
 	background-image: url('../img/wave-top.png')
